--- a/MVC-Filters/Views/Shared/_Layout.cshtml
+++ b/MVC-Filters/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Статистика", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Посмотреть ошибку", "Error", "Home")</li>
                 </ul>
             </div>
         </div>
