Авторизация в данном проекте , не главное , главное нужно было научиться работать с фильтрами

--- a/MVC-Filters/Views/Home/IndexOutOfRangeException.cshtml
+++ b/MVC-Filters/Views/Home/IndexOutOfRangeException.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "IndexOutOfRangeException";
 }
 
-<h2>IndexOutOfRangeException</h2>
+<h2>Произошла ошибка - IndexOutOfRangeException</h2>
+<p>Иногда она возникает и мы перенаправляем вас на эту страницу </p>
+<p>Но проблема решена и письмо администратору было отправлено на почту</p>
 
+    @Html.ActionLink("Вернуться на главную страницу","Index","Home",new{@class="btn btn-primary"})
