--- a/MVC-Filters/Views/Shared/_Layout.cshtml
+++ b/MVC-Filters/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Статистика", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Посмотреть ошибку", "Error", "Home")</li>
+                    <li>@Html.ActionLink("Ошибки", "ErrorsStatistics", "Home")</li>
                 </ul>
             </div>
         </div>
