--- a/MVC-Filters/Views/Shared/Error.cshtml
+++ b/MVC-Filters/Views/Shared/Error.cshtml
@@ -1,25 +1,11 @@
-﻿@using MVC_Filters.Models
-@model MVC_Filters.Models.ErrorModel
-@{
-  
+﻿@{
+    ViewBag.Title = "Ошибка";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Ошибка</title>
-</head>
-<body>
-    <hgroup>
-        @if (Model != null)
-        {
-            <h1>Ошибка. </h1>
-            <h2>При обработке запроса произошла ошибка.</h2>
-            <h5>Дата произошедшей ошибки - @Model.DateOfError</h5>
-            <h4>@Model.Error.ToString()</h4>
-            
-        }
-    </hgroup>
-</body>
-</html>
+<hgroup>
+    
+        <h1>Ошибка. </h1>
+        <h2>При обработке запроса произошла ошибка.</h2>
+        <h5>Произошла непредвиденная ошибка , для подробного описания зайдите на вкладку - "Ошибки" </h5>
+  
+    
+</hgroup>
